src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Opportunity.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Conditions2__c</fullName>
        <description>Payment Terms for Finance on Multi-year Quotes</description>
        <label>Additional Conditions</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Conditions__c</fullName>
        <formula>IF(TEXT(Quote_Type__c)=&quot;Partner&quot;,&quot;Organization listed above as Ship to Company is named as the sole end user, and is non-transferrable, irrevocable and non-cancellable.&quot;,NULL)</formula>
        <label>Additional Conditions (Old)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Renew_Deal_Terms__c</fullName>
        <defaultValue>&quot;1. This order is subject to the terms and conditions of the Turbonomic End-User Software License and Maintenance Agreement.&quot; &amp; BR() &amp; 
&quot;2. End User may accept this quote by (I) issuing a Purchase Order for the products and services identified on this quote, (ii) returning the signed quote to Turbonomic with an official statement that the signator is authorized to accept this Quote on behalf of the organization named as End User, or (iii) signing the quote and filling out a credit card authorization form.&quot; &amp; BR() &amp; 
&quot;3. Once accepted, the quote, including payment obligations, becomes a binding order under the applicable agreement.&quot; &amp; BR() &amp; 
&quot;4. Prices exclude taxes and travel expenses. Licensee shall pay all reasonable travel and out-of-pocket expenses incurred by Turbonomic hereunder, as well as any applicable sales and use taxes.&quot; &amp; BR() &amp; 
&quot;5. Any training or services not completed within 12 months of the contract date will be forfeited unless otherwise specified in writing.&quot; &amp; BR() &amp; 
&quot;6. BY EXECUTING THIS QUOTE AND PROVIDING CREDIT CARD BILLING AUTHORIZATION, YOU ARE AUTHORIZING TURBONOMIC TO BILL YOUR CREDIT CARD IN ADVANCE FOR EACH SUBSEQUENT RENEWAL TERM AND YOU HEREBY AGREE TO PAY SUCH CHARGES UNLESS YOU CANCEL MAINTENANCE IN WRITING IN ACCORDANCE WITH THESE TERMS.&quot; &amp; BR() &amp; BR() &amp;
&quot;Turbonomic will accept a countersigned quote faxed or mailed as purchase order. By signing this quote you explicitly accept and agree to its terms.&quot;</defaultValue>
        <inlineHelpText>Only applies for renewal quotes under $6K - Finance use only.</inlineHelpText>
        <label>Deal Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bill_to_Company__c</fullName>
        <label>Bill to Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Contact__c</fullName>
        <inlineHelpText>Accounts Payable Contact</inlineHelpText>
        <label>Bill to Contact</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Email__c</fullName>
        <label>Bill to Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Bill_to_Phone__c</fullName>
        <label>Bill to Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Control_Module_SKU_Count__c</fullName>
        <label>Control Module SKU Count</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Product_Name_Text__c</field>
            <operation>contains</operation>
            <value>Control Module,Application Performance Manager</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Currency_2__c</fullName>
        <formula>TEXT(Currency__c)</formula>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Canadian Dollars</fullName>
                </value>
                <value>
                    <fullName>US Dollars</fullName>
                    <default>true</default>
                    <label>US Dollars</label>
                </value>
                <value>
                    <fullName>UK Pounds</fullName>
                </value>
                <value>
                    <fullName>Euros</fullName>
                </value>
                <value>
                    <fullName>Singapore Dollars</fullName>
                </value>
                <value>
                    <fullName>Australian Dollars</fullName>
                </value>
                <value>
                    <fullName>South African Rand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_Structure__c</fullName>
        <description>Deal Structure for Payment Terms</description>
        <label>Deal Structure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Perpetual</fullName>
                </value>
                <value>
                    <fullName>1YR Term License</fullName>
                </value>
                <value>
                    <fullName>Multi-Year Term License, Paid Annually</fullName>
                </value>
                <value>
                    <fullName>Multi-Year Term License, Paid Upfront</fullName>
                </value>
                <value>
                    <fullName>Services Only</fullName>
                </value>
                <value>
                    <fullName>Maintenance Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_Terms_Maintenance_Renewal__c</fullName>
        <defaultValue>&quot;1. This order is subject to the terms and conditions of the Turbonomic End-User Software License and Maintenance Agreement.&quot; &amp; BR() &amp;
&quot;2. End User may accept this quote by (I) issuing a Purchase Order for the products and services identified on this quote, (ii) returning the signed quote to Turbonomic with an official statement that the signator is authorized to accept this Quote on behalf of the organization named as End User, or (iii) signing the quote and filling out a credit card authorization form.&quot; &amp; BR() &amp;
&quot;3. Once accepted, the quote, including payment obligations, becomes a binding order under the applicable agreement.&quot; &amp; BR() &amp;
&quot;4. Prices exclude taxes and travel expenses. Licensee shall pay all reasonable travel and out-of-pocket expenses incurred by Turbonomic hereunder, as well as any applicable sales and use taxes.&quot; &amp; BR() &amp;
&quot;5. Any training and services not completed within 12 months of the contract date will be forfeited unless otherwise specified in writing.&quot; &amp; BR() &amp;
&quot;6. In exchange for the discounts set forth above, Licensee agrees that (a) Turbonomic may use Licensee’s name in Turbonomic’s customer list, b) Licensee will serve as a customer reference, and (c) upon approval by Licensee, Turbonomic may issue a press release and case study generally describing the parties’ relationship under this Agreement.&quot;</defaultValue>
        <label>Deal Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deal_Terms__c</fullName>
        <defaultValue>&quot;1. This order is subject to the terms and conditions of the Turbonomic End-User Software License and Maintenance Agreement.&quot; &amp; BR() &amp;
&quot;2. Licensee may accept this quote by (i) issuing a Purchase Order for the products and services identified on this quote, or (ii) returning the signed quote to Turbonomic.&quot; &amp; BR() &amp;
&quot;3. Once accepted, the quote, including payment obligations, becomes a binding order under the applicable agreement.&quot; &amp; BR() &amp;
&quot;4. Prices exclude taxes and travel expenses. Licensee shall pay all reasonable travel and out-of-pocket expenses incurred by Turbonomic hereunder, as well as any applicable sales and use taxes.&quot; &amp; BR() &amp;
&quot;5. Any training and services not completed within 12 months of the contract date will be forfeited unless otherwise specified in writing.&quot;</defaultValue>
        <inlineHelpText>Modify the deal terms only if necessary</inlineHelpText>
        <label>Deal Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DocuSign_Status__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>DocuSign Status</label>
        <referenceTo>dsfs__DocuSign_Status__c</referenceTo>
        <relationshipLabel>DocuSign Status</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Update_Stamp__c</fullName>
        <label>Email Update Stamp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enduser__c</fullName>
        <formula>Ship_to_Company__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enduser</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <label>Exchange Rate (Chosen Currency per US $)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate_for_Calcs__c</fullName>
        <formula>IF(TEXT(Currency__c)=&quot;US Dollars&quot;,1,Exchange_Rate__c)</formula>
        <label>Exchange Rate for Calcs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Includes_Training_PS__c</fullName>
        <formula>IF(Training_PS_SKU_Count__c&gt;0,TRUE,FALSE)</formula>
        <label>Includes Training/PS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maintenance_Terms__c</fullName>
        <description>An empty text box with a default text value that will be over written when the Deal structure is chosen by a Workflow rule: Translate Deal Structure to maintenance terms</description>
        <label>Maintenance Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Maintenance__c</fullName>
        <defaultValue>&quot;Maintenance in future years, if elected, will be billed at the same amount of annualized maintenance for the prior year + 3%.&quot;</defaultValue>
        <description>This is the original Maintenance field that might be in use for reports, 
The name was changed from Maintenance to Maintenance_v1 to distinguish it from the new field &apos;Maintenance&quot; (Std_Maintenance__c) which is becoming a client facing field label.</description>
        <inlineHelpText>You are only allowed to change the percent in this field or delete the text entirely if you are quoting a term deal</inlineHelpText>
        <label>Maintenance_v1</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Quote__c</fullName>
        <formula>CreatedDate=Opportunity.Most_Recent_Quote_Create_Date__c</formula>
        <label>Most Recent Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Type any additional notes (this field WILL show up on the quote unless it is blank)</inlineHelpText>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>One_Quote__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One (Quote)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <formula>Opportunity.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <formula>Opportunity.CloseDate</formula>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Expected_License_Value__c</fullName>
        <formula>Opportunity.Expected_License_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Expected License Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Expected_Revenue_Type__c</fullName>
        <formula>TEXT(Opportunity.Expected_Revenue_Type__c)</formula>
        <label>Opportunity Expected Revenue Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Opportunity.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Opportunity.Owner.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Safe_ID__c</fullName>
        <formula>Opportunity.Opportunity_Safe_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT(Opportunity.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <formula>TEXT(Opportunity.Type)</formula>
        <label>Opportunity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Upfront_Revenue_Expected__c</fullName>
        <formula>TEXT(Opportunity.Upfront_Revenue_Expected__c)</formula>
        <label>Opportunity Upfront Revenue Expected?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Discount__c</fullName>
        <formula>IF(Total_List_Price_Currency__c=0,NULL,
1-Total_Sales_Price__c/(Total_List_Price_Currency__c*Exchange_Rate_for_Calcs__c))</formula>
        <label>Overall Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Owner_Team_Group_Buckets__c</fullName>
        <formula>Opportunity.Owner_Team_Group_Buckets__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Team (Group Buckets)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <formula>Opportunity.Partner_Account__r.Name</formula>
        <label>Partner Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Deal_Terms__c</fullName>
        <defaultValue>&quot;1. This order is subject to the terms and conditions of the Agreement between Partner and Turbonomic, and in absence of such Agreement the Standard Turbonomic Partner Agreement terms will apply (the Standard Turbonomic Partner Agreement terms can be found at www.XXXX.com).  The terms that govern the end-user’s use of the Software will be per the Turbonomic End-User Software License and Maintenance Agreement.&quot; &amp; BR() &amp;
&quot;2. Partner may accept this quote by (i) issuing a Purchase Order for the products and services identified on this quote, or (ii) returning the signed quote to Turbonomic.&quot; &amp; BR() &amp;
&quot;3. Once accepted, the quote, including payment obligations, becomes a binding order under the applicable agreement.&quot; &amp; BR() &amp;
&quot;4. Prices exclude taxes and travel expenses. Partner shall pay all reasonable travel and out-of-pocket expenses incurred by Turbonomic hereunder, as well as any applicable sales and use taxes.&quot; &amp; BR() &amp;
&quot;5. Any training and services not completed within 12 months of the contract date will be forfeited unless otherwise specified in writing.&quot;</defaultValue>
        <label>Deal Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quote_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Quote Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Type__c</fullName>
        <label>Quote Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Renewal – Direct</fullName>
                </value>
                <value>
                    <fullName>Renewal – Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Clone_Options__c</fullName>
        <label>Renewal Clone Options</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1YR</fullName>
                </value>
                <value>
                    <fullName>2YR</fullName>
                </value>
                <value>
                    <fullName>3YR</fullName>
                </value>
                <value>
                    <fullName>4YR</fullName>
                </value>
                <value>
                    <fullName>5YR</fullName>
                    <isActive>false</isActive>
                    <label>5YR</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Maintenance__c</fullName>
        <defaultValue>&quot;At the end of the maintenance term set forth above Maintenance will automatically renew for additional 12-month terms at the same amount as maintenance for the prior year + 3%, unless cancelled in writing not less than 90 days prior to the end of the then current term.&quot;</defaultValue>
        <label>Maintenance</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Renewal_Status__c</fullName>
        <label>Renewal Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <formula>Opportunity.Sales_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Company__c</fullName>
        <label>Ship to Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Contact__c</fullName>
        <description>License holder</description>
        <label>Ship to Contact</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Email__c</fullName>
        <label>Ship to Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ship_to_Phone__c</fullName>
        <label>Ship to Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Should_Include_Training_SKU__c</fullName>
        <inlineHelpText>All quotes should include a training SKU unless the opportunity is an upsell or the prospect declines training prior to the quote.  For small opportunities, use the free monthly training SKU, which is $0 and simply serves as a reminder to the prospect.</inlineHelpText>
        <label>Should Include Training SKU?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signature__c</fullName>
        <label>Signature</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Terms_Conditions__c</fullName>
        <description>Terms &amp; Coniditions Of Business</description>
        <inlineHelpText>You must  specify whether the VMTurbo End User license Agreement (EULA) or custom terms and conditions have been agreed upon.</inlineHelpText>
        <label>Terms &amp; Conditions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_List_Price_Currency__c</fullName>
        <label>Total List Price (Currency)</label>
        <summarizedField>QuoteLineItem.Total_List_Price_Curr__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_List_Price_Text__c</fullName>
        <formula>CASE(Currency__c, 
&quot;US Dollars&quot;,&quot;$&quot;, 
&quot;UK Pounds&quot;,&quot;£&quot;, 
&quot;Euros&quot;,&quot;€&quot;,
&quot;Canadian Dollars&quot;,&quot;C$&quot;, 
&quot;&quot;)&amp; 

IF( 
  Total_List_Price_Currency__c*Exchange_Rate_for_Calcs__c &gt;= 1000000, 
  TEXT(FLOOR(Total_List_Price_Currency__c*Exchange_Rate_for_Calcs__c / 1000000)) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
IF( 
  Total_List_Price_Currency__c*Exchange_Rate_for_Calcs__c &gt;= 1000, 
  RIGHT(TEXT(FLOOR(Total_List_Price_Currency__c*Exchange_Rate_for_Calcs__c / 1000)), 3) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Total_List_Price_Currency__c*Exchange_Rate_for_Calcs__c)), 3) &amp; &quot;.&quot; &amp; 
IF( 
  MOD(Total_List_Price_Currency__c*Exchange_Rate_for_Calcs__c , 1) * 100 &lt; 10, 
  &quot;0&quot; &amp; TEXT(ROUND(MOD(Total_List_Price_Currency__c*Exchange_Rate_for_Calcs__c , 1), 2) * 100), 
  TEXT(MIN(ROUND(MOD(Total_List_Price_Currency__c*Exchange_Rate_for_Calcs__c , 1), 2) * 100, 99)) 
)</formula>
        <label>Total List Price</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Sales_Price_Text__c</fullName>
        <formula>CASE(Currency__c, 
&quot;US Dollars&quot;,&quot;$&quot;, 
&quot;UK Pounds&quot;,&quot;£&quot;, 
&quot;Euros&quot;,&quot;€&quot;,
&quot;Canadian Dollars&quot;,&quot;C$&quot;, 
&quot;&quot;)&amp; 

IF( 
  Total_Sales_Price__c &gt;= 1000000, 
  TEXT(FLOOR(Total_Sales_Price__c / 1000000)) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
IF( 
  Total_Sales_Price__c &gt;= 1000, 
  RIGHT(TEXT(FLOOR(Total_Sales_Price__c / 1000)), 3) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Total_Sales_Price__c)), 3) &amp; &quot;.&quot; &amp; 
IF( 
  MOD(Total_Sales_Price__c , 1) * 100 &lt; 10, 
  &quot;0&quot; &amp; TEXT(ROUND(MOD(Total_Sales_Price__c , 1), 2) * 100), 
  TEXT(MIN(ROUND(MOD(Total_Sales_Price__c , 1), 2) * 100, 99)) 
)</formula>
        <label>Total Sales Price</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Sales_Price__c</fullName>
        <label>Total Sales Price (Currency)</label>
        <summarizedField>QuoteLineItem.Total_Sales_Price_Currency__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Training_PS_SKU_Count__c</fullName>
        <label>Training/PS SKU Count</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Product_Name_Text__c</field>
            <operation>contains</operation>
            <value>Training,RAPID Success</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_change_Maintenance_verbiage</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
NOT(ISNEW()),
ISCHANGED(Maintenance__c),
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;,
$UserRole.Name&lt;&gt;&quot;CFO&quot;,
$UserRole.Name&lt;&gt;&quot;General Counsel&quot;,
NOT(CONTAINS($UserRole.Name,&quot;Customer Account&quot;)),
IF(TEXT(Opportunity.Expected_Revenue_Type__c)=&quot;Term&quot;,
  NOT(ISBLANK(Maintenance__c)),
  OR(
    ISBLANK(Maintenance__c),
    NOT(CONTAINS(Maintenance__c,&quot;Maintenance in future years will be billed at the same amount as maintenance for the prior year +&quot;)),
    RIGHT(Maintenance__c,2)&lt;&gt;&quot;%.&quot;)
  )
)</errorConditionFormula>
        <errorDisplayField>Maintenance__c</errorDisplayField>
        <errorMessage>Please fill in the Expected Revenue Type on the Opportunity if you wish to clear the maintenance terms for a term deal. Otherwise you may only edit the percentage. If there are atypical maintenance terms, please reach out to Ops or Finance to help.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Finance_Only_Change_Terms</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
ISCHANGED(Deal_Terms__c),
$UserRole.Name&lt;&gt;&quot;CFO&quot;,
NOT(CONTAINS($User.Full_Name__c,&quot;Newt&quot;)),
NOT(CONTAINS($User.Full_Name__c,&quot;Kevin Petrick&quot;)),
NOT(CONTAINS($User.Full_Name__c,&quot;Alden French&quot;)),
NOT(CONTAINS($UserRole.Name,&quot;Customer Account&quot;)),
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;)</errorConditionFormula>
        <errorDisplayField>Deal_Terms__c</errorDisplayField>
        <errorMessage>Only Finance may change the deal terms. Please email Marie Epstein or Steve Rajcula.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Finance_Only_Change_Terms_New</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
ISNEW(),
OR( 
AND( 
NOT(CONTAINS(Deal_Terms__c,&quot;1. This order is subject to the terms and conditions of the Turbonomic End-User Software License and Maintenance Agreement.&quot;)), 
NOT(CONTAINS(Deal_Terms__c,&quot;2. End User may accept this quote by (I) issuing a Purchase Order for the products and services identified on this quote, (ii) returning the signed quote to Turbonomic with an official statement that the signator is authorized to accept this Quote on behalf of the organization named as End User, or (iii) signing the quote and filling out a credit card authorization form.&quot;)), 
NOT(CONTAINS(Deal_Terms__c,&quot;3. Once accepted, the quote, including payment obligations, becomes a binding order under the applicable agreement.&quot;)), 
NOT(CONTAINS(Deal_Terms__c,&quot;4. Prices exclude taxes and travel expenses. Licensee shall pay all reasonable travel and out-of-pocket expenses incurred by Turbonomic hereunder, as well as any applicable sales and use taxes.&quot;)), 
NOT(CONTAINS(Deal_Terms__c,&quot;6. In exchange for the discounts set forth above, Licensee agrees that (a) Turbonomic may use Licensee’s name in Turbonomic’s customer list, b) Licensee will serve as a customer reference, and (c) upon approval by Licensee, Turbonomic may issue a press release and case study generally describing the parties’ relationship under this Agreement.&quot;)), 
NOT(CONTAINS(Deal_Terms__c,&quot;7. Effective September 1, 2016, Turbonomic migrated its licensing platform from measuring physical CPU sockets to measuring physical CPU processor cores under management by the Software.  By executing and delivering this quote (or by issuing a purchase order referencing this quote), Licensee acknowledges and agrees that the quantity of all Turbonomic Software licensed under License Agreement, including the Software licensed hereunder, is denominated in physical CPU processor cores determined as of the effective date of this order, notwithstanding any provision to the contrary to the effect that the Software is licensed on a per-CPU socket basis.&quot;))),
AND( 
NOT(CONTAINS(Deal_Terms__c,&quot;1. This order is subject to the terms and conditions of the VMTurbo End-User Software License and Maintenance Agreement.&quot;)), 
NOT(CONTAINS(Deal_Terms__c,&quot;2. End User may accept this quote by (I) issuing a Purchase Order for the products and services identified on this quote, (ii) returning the signed quote to VMTurbo with an official statement that the signator is authorized to accept this Quote on behalf of the organization named as End User, or (iii) signing the quote and filling out a credit card authorization form.&quot;)), 
NOT(CONTAINS(Deal_Terms__c,&quot;3. Once accepted, the quote, including payment obligations, becomes a binding order under the applicable agreement.&quot;)), 
NOT(CONTAINS(Deal_Terms__c,&quot;4. Prices exclude taxes and travel expenses. Licensee shall pay all reasonable travel and out-of-pocket expenses incurred by VMTurbo hereunder, as well as any applicable sales and use taxes.&quot;)), 
NOT(CONTAINS(Deal_Terms__c,&quot;6. In exchange for the discounts set forth above, Licensee agrees that (a) VMTurbo may use Licensee’s name inVMTurbo’s customer list, b) Licensee will serve as a customer reference, and (c) upon approval by Licensee, VMTurbo may issue a press release and case study generally describing the parties’ relationship under this Agreement.&quot;)))), 
$UserRole.Name&lt;&gt;&quot;CFO&quot;,
NOT(CONTAINS($User.Full_Name__c,&quot;Newt&quot;)),
NOT(CONTAINS($UserRole.Name,&quot;Customer Account&quot;)),
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;)</errorConditionFormula>
        <errorDisplayField>Deal_Terms__c</errorDisplayField>
        <errorMessage>Only Finance may change the deal terms. Please email Marie Epstein or Steve Rajcula.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Deal_Structure</fullName>
        <active>true</active>
        <description>Require Deal Structure on Quotes beginning with quotes created after 11/12/2017</description>
        <errorConditionFormula>AND(
LastModifiedDate - CreatedDate &gt; 0.05,
DATEVALUE(CreatedDate)&gt;DATEVALUE(&quot;2017-11-12&quot;),
ISBLANK(TEXT(Deal_Structure__c))
)</errorConditionFormula>
        <errorDisplayField>Deal_Structure__c</errorDisplayField>
        <errorMessage>Please denote the deal structure.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_exchange_rate</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT(Currency__c)&lt;&gt;&quot;US Dollars&quot;,
ISBLANK(Exchange_Rate__c),
NOT(ISCHANGED(Currency__c)))</errorConditionFormula>
        <errorDisplayField>Exchange_Rate__c</errorDisplayField>
        <errorMessage>Exchange rate is required if currency is not US dollars</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Term_Editing</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
ISCHANGED(Deal_Terms__c),
$UserRole.Name&lt;&gt;&quot;CFO&quot;,
$UserRole.Name&lt;&gt;&quot;VMT SF admin&quot;)</errorConditionFormula>
        <errorMessage>You may not change the Deal Terms. Please review with FInance and have them enter the changes for you.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ship_to_address_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISNEW(),OR(ISCHANGED(ShippingState),ISCHANGED(ShippingCountry))),
OR(
AND(OR(UPPER(ShippingCountry)=&quot;UNITED STATES&quot;,
UPPER(ShippingCountry)=&quot;UNITED STATES OF AMERICA&quot;,
UPPER(ShippingCountry)=&quot;AMERICA&quot;,
UPPER(ShippingCountry)=&quot;US&quot;,
UPPER(ShippingCountry)=&quot;U.S.&quot;,
UPPER(ShippingCountry)=&quot;USA&quot;,
UPPER(ShippingCountry)=&quot;U.S.A.&quot;),ISBLANK(ShippingState)),
ISBLANK(ShippingCountry)))</errorConditionFormula>
        <errorDisplayField>ShippingCountry</errorDisplayField>
        <errorMessage>Shipping address is required.  If the entire address is not available, please enter the state and country (for US) or just country (for international).  The billing address is not required but recommended.</errorMessage>
    </validationRules>
</CustomObject>